🚀 [ADD] Memo/Lazy functionalities

--- a/index.html
+++ b/index.html
@@ -9,5 +9,8 @@
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
+    <noscript>
+        <h3>This app requires Javascript to work!</h3>
+    </noscript>
   </body>
 </html>
